update to call-to-action--large component - setting a max-height to prevent content overflow

--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -100,6 +100,8 @@
       width: 40%;
       max-width: rem(520);
       padding: rem(25) rem(45);
+      max-height: 41.5vw;
+      overflow: hidden;
     }
     @include media-breakpoint-up(xl) {
       right: rem(40);
@@ -108,6 +110,10 @@
     @include media-breakpoint-up(xxl) {
       right: rem(82);
       padding: rem(64) rem(83) rem(20);
+      max-height: rem(600);
+    }
+    @media (min-width: 1600px) {
+      max-height: rem(660);
     }
 
     &:before {
